# cobblemon-academy-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/cobblemon_academy_tracker_api/: constants.py  database.py  main.py  schemas.py  services.py
backend/cobblemon_academy_tracker_api/routers/: leaderboards.py  players.py
backend/tests/: conftest.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: CommandPalette.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/titles/: TitleBadge.tsx  TitleCard.tsx  TitlesSection.tsx  index.ts
frontend/src/components/ui/: tabs.tsx  tooltip.tsx
frontend/src/lib/: titles.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Leaderboards.tsx  PlayerProfile.tsx  Players.tsx
